fixed height overflow issue on all apps

--- a/src/Styles/AppWindow.css
+++ b/src/Styles/AppWindow.css
@@ -1,3 +1,17 @@
+/*
+    This class was made to be used as a defalut container to avoid height overflow options
+    Flex layout will ensure the 100% height is not the 100% height of the window-content container-
+    - which in turn can create an overflow issue.
+*/
+
+.mother-window-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
 * {
     scrollbar-width: auto;
     scrollbar-color: #111 #111;
