--- a/src/Styles/Apps/Explorer.css
+++ b/src/Styles/Apps/Explorer.css
@@ -4,11 +4,6 @@
     height: 100%;
 }
 
-.quick-access {
-    color: white;
-    font-family: sans-serif;
-}
-
 .item-listing
 {
     --grid-layout-gap: 0px;
@@ -38,3 +33,28 @@
     overflow: hidden scroll;
     z-index: 1;
 }
+
+.search-bar-explorer {
+    border-radius: 25px;
+    padding-inline: 10px;
+    width: 100%;
+    margin: 20px;
+    align-self: center;
+    justify-self: center;
+    /* padding: 30px; */
+    height: 28px;
+    /* margin-inline: auto; */
+    border: 0.1px solid #666;
+    color: rgb(194, 194, 194);
+    background-color: #333;
+}
+
+.search-bar:focus {
+    border: none;
+    outline: none;
+}
+
+/* .explorer-background-container {
+    background-image: linear-gradient(20deg, #eb9eff, #ca34f7);
+    background: #ca34f7;
+} */
