--- a/src/Styles/Apps/Social.css
+++ b/src/Styles/Apps/Social.css
@@ -1,11 +1,3 @@
-.mother-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    border: none;
-}
-
 .messages-board-container {
     display: flex;
     flex-direction: column;
